Support multiple Setting Priority status IDs per project
SETTING_PRIORITY_STATUS_ID becomes SETTING_PRIORITY_STATUS_IDS (a
comma-separated set), since each Backlog project can assign this
custom status a different numeric ID. RestrictedStatusTransitionPolicy
now checks membership in the configured set instead of equality
against a single value.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01DY2Ky8m3n3Lw3sgdsH8DHU